--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background_light">
+    android:background="@color/background_light"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +21,6 @@
             android:layout_height="24dp"
             android:src="@drawable/ic_back"
             android:contentDescription="Quay lại"
-            android:tint="@android:color/black"
             android:padding="4dp"
             android:background="?android:selectableItemBackgroundBorderless" />
 
