--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -43,11 +43,12 @@
 
     <Button
         android:id="@+id/btnAddAddress"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Thêm địa chỉ mới"
         android:textAllCaps="false"
         android:layout_marginTop="12dp"
+        android:layout_gravity="center_horizontal"
         android:backgroundTint="@color/colorPrimary"
         android:textColor="@android:color/white" />
 </LinearLayout>
