--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,7 +32,7 @@
                 android:layout_centerVertical="true"
                 android:layout_alignParentStart="true"
                 android:src="@drawable/ic_search"
-                android:tint="#888888" />
+                app:tint="#888888" />
 
             <EditText
                 android:id="@+id/searchEditText"
@@ -57,7 +57,7 @@
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_mic"
-                android:tint="#888888" />
+                app:tint="#888888" />
         </RelativeLayout>
 
         <!-- Cart button -->
