--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -53,6 +54,7 @@
             android:textSize="13sp"
             android:layout_marginTop="2dp" />
     </LinearLayout>
+
     <ImageButton
         android:id="@+id/btnRemoveItem"
         android:layout_width="32dp"
@@ -60,5 +62,5 @@
         android:src="@drawable/ic_delete"
         android:background="?selectableItemBackgroundBorderless"
         android:contentDescription="Xóa"
-        android:tint="@android:color/holo_red_dark"/>
+        app:tint="@android:color/holo_red_dark" />
 </LinearLayout>
