--- a/app/src/main/res/layout/activity_staff.xml
+++ b/app/src/main/res/layout/activity_staff.xml
@@ -1,8 +1,10 @@
 <!--res/layout/activity_staff.xml -->
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+>
     <!-- Header with title, search and profile -->
     <LinearLayout
         android:id="@+id/header"
@@ -33,16 +35,6 @@
             android:background="?attr/selectableItemBackgroundBorderless"/>
     </LinearLayout>
 
-    <!-- Content container for fragments -->
-    <FrameLayout
-        android:id="@+id/fragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="56dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_below="@id/header"
-        android:layout_weight="1" />
-
     <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
@@ -50,6 +42,19 @@
         android:layout_height="56dp"
         android:layout_gravity="bottom"
         app:menu="@menu/menu_staff_nav"
-        app:itemIconTint="@color/nav_unselected"
-        app:itemTextColor="@color/nav_selected" />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/nav_selected"
+        android:layout_alignParentBottom="true"
+      />
+
+    <!-- Content container for fragments -->
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="56dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_below="@id/header"
+        android:layout_weight="1" />
+
+</RelativeLayout>
