Add Products Management

--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRefreshDelivery"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <!-- Button Tạo phiếu giao hàng luôn hiện -->
-    <Button
-        android:id="@+id/btnCreateDeliveryNote"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tạo phiếu giao hàng"
-        android:layout_margin="8dp"/>
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabDelivery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:tabGravity="fill" />
+        <!-- Button Tạo phiếu giao hàng luôn hiện -->
+        <Button
+            android:id="@+id/btnCreateDeliveryNote"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tạo phiếu giao hàng"
+            android:layout_margin="8dp"/>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPagerDelivery"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        <!-- Loading spinner cho toàn bộ delivery section -->
+        <ProgressBar
+            android:id="@+id/pbDeliveryLoading"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
-</LinearLayout>
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabDelivery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="fixed"
+            app:tabGravity="fill" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPagerDelivery"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
