--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,8 @@
     <color name="text_secondary_dark">#BBBBBB</color>
     <color name="card_background_light">#FFFFFF</color>
     <color name="card_background_dark">#1E1E1E</color>
+    <color name="transparent_black">#80000000</color>
+    <color name="teal">#008080</color>
 
 
 </resources>
