--- a/app/src/main/res/layout/activity_create_delivery.xml
+++ b/app/src/main/res/layout/activity_create_delivery.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -40,6 +41,7 @@
             <Button
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:id="@+id/btnCancel"
                 android:text="Hủy" />
             <Button
