--- a/app/src/main/res/layout/activity_staff_profile.xml
+++ b/app/src/main/res/layout/activity_staff_profile.xml
@@ -45,7 +45,6 @@
         android:layout_height="wrap_content"
         android:text="Name: "
         android:textSize="18sp"
-        android:textStyle="bold"
         android:layout_marginBottom="8dp" />
 
     <!-- Email -->
@@ -78,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
-        android:text="Log Out"
+        android:text="Đăng Xuất"
         android:backgroundTint="@android:color/holo_red_dark"
         android:textColor="@color/white" />
 
