--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
 
     <color name="star_yellow">#FFC107</color>
     <color name="star_gray">#CCCCCC</color>
+    <color name="orange_vibrant">#FF8C00</color>
 
 
 </resources>
